# IconFactory

./: .gitignore  App.cpp  App.h  CMakeLists.txt  IconCanva.cpp  IconCanva.h  IconPreview.cpp  IconPreview.h  LICENSE  MainFrame.cpp  MainFrame.h  README.md  app.rc  convert_images.py  rotate_png.py
src/: App.cpp  IconCanva.cpp  IconCanva.h  MainFrame.cpp  MainFrame.h  Resources.h
